--- a/src/docs/asciidoc/kubernetes-certified-kubernetes-adm.adoc
+++ b/src/docs/asciidoc/kubernetes-certified-kubernetes-adm.adoc
@@ -332,8 +332,264 @@ kubectl operations:
 
 [source,bash]
 ----
-kubectl create -f pi-job.yml
-kubectl describe job pi
-kubectl logs pi-8dd20
+$ kubectl create -f pi-job.yml
+$ kubectl describe job pi
+$ kubectl logs pi-8dd20
+
+$ kubectl get pods --field-selector status.phase=Running
+$ kubectl get services --field-selector metadata.namespace=default
+
+$ k cluster-info
+$ k get componentstatus
+$ k api-resources -o wide
 ----
 
+== Installing the Kubernetes cluster
+
+Run on all nodes:
+
+[source,bash]
+----
+# Get the Docker gpg key
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+
+# Add the Docker repository
+sudo add-apt-repository    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+   $(lsb_release -cs) \
+   stable"
+
+# Get the Kubernetes gpg key
+curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+
+# Add the Kubernetes repository
+cat << EOF | sudo tee /etc/apt/sources.list.d/kubernetes.list
+deb https://apt.kubernetes.io/ kubernetes-xenial main
+EOF
+
+# Update your packages
+sudo apt-get update
+
+# Install Docker, kubelet, kubeadm, and kubectl
+sudo apt-get install -y docker-ce=5:19.03.12~3-0~ubuntu-bionic kubelet=1.17.8-00 kubeadm=1.17.8-00 kubectl=1.17.8-00
+
+# Hold them at the current version
+sudo apt-mark hold docker-ce kubelet kubeadm kubectl
+
+# Add the iptables rule to sysctl.conf
+echo "net.bridge.bridge-nf-call-iptables=1" | sudo tee -a /etc/sysctl.conf
+
+# Enable iptables immediately
+sudo sysctl -p
+----
+
+Run these commands only on the master:
+
+[source,bash]
+----
+# Initialize the cluster
+sudo kubeadm init --pod-network-cidr=10.244.0.0/16
+
+# Set up local kubeconfig
+mkdir -p $HOME/.kube
+
+sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+
+sudo chown $(id -u):$(id -g) $HOME/.kube/config
+
+# Apply Calco CNI
+kubectl apply -f https://docs.projectcalico.org/v3.14/manifests/calico.yaml
+----
+
+Checking the cluster status:
+
+[source,bash]
+----
+$ k get po -o custom-columns=POD:metadata.name,NODE:spec.nodeName --sort-by spec.nodeName -n kube-system
+$ k get endpoints kube-scheduler -n kube-system -o yaml
+----
+
+=== Security
+
+[source,bash]
+----
+$ k create ns my-ns
+$ k run test --image=xxx -n my-ns
+$ k exec -it test-659588d944-pqcpd -n my-ns -- curl localhost:8001/api/v1/namespaces/my-ns/services
+$ k exec -it test-659588d944-pqcpd -n my-ns -- cat /var/run/secrets/kubernetes.io/serviceaccount/token
+$ k get serviceaccounts
+----
+
+Testing the cluster
+
+[source,bash]
+----
+$ k run nginx --image nginx
+$ k get pods
+$ k port-forward <pod-name> 8081:80
+$ k logs <pod-name>
+$ k exec <pod-name> -- nginx -v
+$ k expose deployment nginx --port 80 --type NodePort
+$ k get services
+----
+
+== Upgrading the Kubernetes cluster
+
+[source,bash]
+----
+$ k version --short
+$ k get nodes
+$ sudo kubeadm version
+$ sudo apt-mark unhold kubeadm kubelet
+$ sudo apt install -y kubeadm=1.18.9-00
+$ sudo apt-mark hold kubeadm
+$ sudo apt-mark unhold kubectl
+$ sudo apt install -y kubectl=1.18.9-00 kubelet=1.18.9-00
+$ sudo apt-mark hold kubectl kubelet
+----
+
+Then upgrade kubelet on each node.
+
+=== Operating system upgrades
+
+Firstly drain the node:
+
+[source,bash]
+----
+$ k drain <node-name> --ignore-daemonsets
+$ k uncordon <node-name>
+$ k delete node <node-name>
+----
+
+Joining new node.
+
+[source,bash]
+----
+## on master:
+$ sudo kubeadm token generate
+$ sudo kubeadm token create <generated-token> --ttl 2h --print-join-command
+----
+
+=== Backing up a cluster
+
+[source,bash]
+----
+$ wget https://github.com/etcd-io/etcd/releases/download/v3.3.12/etcd-v3.3.12-linux-amd64.tar.gz
+$ tar xvf etcd-v3.3.12-linux-amd64.tar.gz
+$ sudo mv etcd-v3.3.12-linux-amd64/etcd* /usr/local/bin
+$ sudo ETCDCTL_API=3 etcdctl snapshot save snapshot.db \
+    --cacert /etc/kubernetes/pki/etcd/ca.crt \
+    --cert /etc/kubernetes/pki/etcd/server.crt \
+    --key /etc/kubernetes/pki/etcd/server.key
+
+## help for etcd:
+$ ETCDCTL_API=3 etcdctl --help
+$ ETCDCTL_API=3 etcdctl --write-out=table snapshot status snapshot.db
+
+----
+
+== Networking
+
+=== Pod and node networking
+
+[source,bash]
+----
+## getting pid
+$ docker inspect --format '{{ .State.Pid }}' <container-id>
+
+## getting interfates
+$ sudo nsenter -t <pid> -n ip addr
+
+----
+
+=== CNI - Container Network Interface
+
+Services:
+
+* simplify application components.
+* single doorway to pods
+
+[source,yaml]
+----
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-nodeport
+spec:
+  type: NodePort
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+    nodePort: 30080
+  selector:
+    app: nginx
+----
+
+Service types:
+
+* NodePort
+* ClusterIP
+* LoadBalancer
+
+==== Load balancers
+
+[source,yaml]
+----
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-loadbalancer
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: nginx
+----
+
+Exposing load balancer:
+
+[source,bash]
+----
+$ kubectl run kubeserve2 --image=...
+$ kubectl scale deployment/kubeserve2 --replicas=2
+$ kubectl expose deployment kubeserve2 --port 80 --target-port 8080 --type LoadBalancer
+
+## to eliminate load balancing latency
+$ kubectl annotate service kubeserve2 externalTrafficPolicy=Local
+----
+
+==== Ingress
+
+[source,yaml]
+----
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: service-ingress
+spec:
+  rules:
+  - host: kubeserve.example.com
+    http:
+      paths:
+      - backend:
+          serviceName: kubeserve2
+          servicePort: 80
+  - host: app.example.com
+    http:
+      paths:
+      - backend:
+          serviceName: nginx
+          servicePort: 80
+  - http:
+      paths:
+      - backend:
+          serviceName: httpd
+          servicePort: 80
+----
+
+[source,bash]
+----
+$ kubectl edit ingress
+----
