--- a/src/docs/asciidoc/kubernetes-certified-kubernetes-adm.adoc
+++ b/src/docs/asciidoc/kubernetes-certified-kubernetes-adm.adoc
@@ -370,7 +370,7 @@ EOF
 sudo apt-get update
 
 # Install Docker, kubelet, kubeadm, and kubectl
-sudo apt-get install -y docker-ce=5:19.03.12~3-0~ubuntu-bionic kubelet=1.17.8-00 kubeadm=1.17.8-00 kubectl=1.17.8-00
+sudo apt-get install -y docker-ce=5:19.03.12~3-0~ubuntu-bionic kubelet=1.18.9-00 kubeadm=1.18.9-00 kubectl=1.18.9-00
 
 # Hold them at the current version
 sudo apt-mark hold docker-ce kubelet kubeadm kubectl
@@ -396,7 +396,7 @@ sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
 
 sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
-# Apply Calco CNI
+# Apply Calico CNI
 kubectl apply -f https://docs.projectcalico.org/v3.14/manifests/calico.yaml
 ----
 
@@ -593,3 +593,51 @@ spec:
 ----
 $ kubectl edit ingress
 ----
+
+=== DNS
+
+Kubernetes use CoreDNS.
+
+Every service in the cluster is assigned a DNS name.
+
+A Pod'd DNS search list will include the Pod's own namespace
+and the cluster's default domain.
+
+kubernetes.default.svc.cluster.local
+
+<service-name>.<namespace>.<base-domain-name>
+
+in example above:
+
+* <service-name> is _kubernetes_
+* <namespace> is _default_
+* <base-domain-name> is _svc.cluster.local_
+
+example for pod dns:
+
+10-24-3-20.default.pod.cluster.local
+
+== Scheduling
+
+The Default Scheduler:
+
+. does the node have adequate hardware resources?
+. is the node running out of resources?
+. does the pod request a specific node?
+. does the node have a matching label?
+. if the pod requests a port, is it available?
+. if the pod requests a volume, can it be mounted?
+. does the pod tolerate the taints of the node?
+. does the pod specify node or pod affinity?
+
+Labeling nodes:
+
+ $ k label node <node-name> <name>=<value>
+
+
+Todo:
+
+* service mesh:
+    ** Istio
+    ** Linkerd
+    ** Envoy proxy
